# S2ObjectModel

./: .gitignore  CMakeLists.txt  README.md  README.md.orig
pom/display_cloud/: main.cpp
pom/display_normals/: CMakeLists.txt  main.cpp
pom/keypoints_review/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  S2ObjectModelConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/ClosedCloudMerge/: CMakeLists.txt  (+2 more)
src/Components/Harris3DKeypoints/: CMakeLists.txt  Harris3DKeypoints.cpp  Harris3DKeypoints.hpp
src/Components/ISS3DKeypoints/: CMakeLists.txt  ISS3DKeypoints.cpp  ISS3DKeypoints.hpp
src/Components/S2OMJSONWriter/: CMakeLists.txt  S2OMJSONWriter.cpp  S2OMJSONWriter.hpp
src/Components/SHOTObjectMatcher/: CMakeLists.txt  SHOTObjectMatcher.cpp  SHOTObjectMatcher.hpp
src/Components/SHOTObjectModelJSONReader/: CMakeLists.txt  SHOTObjectModelJSONReader.cpp  SHOTObjectModelJSONReader.hpp
src/Components/SingleS20MMatcher/: CMakeLists.txt  SingleS20MMatcher.cpp  SingleS20MMatcher.hpp
src/Components/UniformSampling/: CMakeLists.txt  UniformSampling.cpp  UniformSampling.hpp
src/Types/: CMakeLists.txt  PointXYZSIFTSHOT.hpp  S2ObjectModel.hpp  S2ObjectModelFactory.hpp
tasks/: ConvertSOMtoS2OM.xml  CutAndMatchScene.xml  DetectHarris3dInRGBXYZSequence.xml  DetectIssInRGBXYZSequence.xml  DetectSusan3dInRGBXYZSequence.xml  DetectUniformSamplingInRGBXYZSequence.xml  DisplayCuboidNormals.xml  DisplayNormals_XYZ_RGB_MASK.xml  DisplayS20.xml  ExtendSOMToS2OM  ExtendSOMToS2OM.xml  GenerateModel.xml  GenerateS2OM.xml  HarrisKeypointsDisplayCuboid.xml  HarrisKeypointsDisplay_XYZ_RGB_MASK.xml  IssKeypointsDisplayRGB_XYZ_MASK.xml  IssKeypointsDisplayStereo.xml  Match2.xml  MatchTransformedScene.xml  ReadAndDisplayS2ObjectModel.xml  SmoothRGBXYZSequence.xml  SusanKeypointsDisplayCuboid.xml  TransformRGBXYZToS2OMCloud.xml  TransformViewToS2OMCloud.xml  UniformSamplingDisplayCuboid.xml  UniformSamplingKeypointsDisplay.xml  UniformSamplingKeypointsDisplayXYZ_RGB_MASK.xml  corrs.xml  display.xml  display2.xml  generator.xml  generatorSHOT.xml  matchS2OM.xml  matchS2OM_v2.xml  matchS2OM_v3.xml  matchS2OM_vis.xml  temp__DisplayCuboidNormals.xml  temp__DisplayNormals_XYZ_RGB_MASK.xml  temp__DisplayNormals_XYZ_RGB_MASK_ok.xml  temp__DisplayS20.xml  (+13 more)
tasks/cuboid_test/: gigabyte_gigabyte_0001.xml  gigabyte_gigabyte_001.xml  gigabyte_gigabyte_01.xml  gigabyte_loyd_0001.xml  gigabyte_loyd_001.xml  gigabyte_loyd_01.xml  gigabyte_remsey_0001.xml  gigabyte_remsey_001.xml  gigabyte_remsey_01.xml  loyd_gigabyte_0001.xml  loyd_gigabyte_001.xml  loyd_gigabyte_01.xml  loyd_loyd_0001.xml  loyd_loyd_001.xml  loyd_loyd_01.xml  loyd_remsey_0001.xml  loyd_remsey_001.xml  loyd_remsey_01.xml  remsey_gigabyte_0001.xml  remsey_gigabyte_001.xml  remsey_gigabyte_01.xml  remsey_loyd_0001.xml  remsey_loyd_001.xml  remsey_loyd_01.xml  remsey_remsey_0001.xml  remsey_remsey_001.xml  remsey_remsey_01.xml
tasks/partial_test/: MatchPair_15_000001.xml  MatchPair_15_00001.xml  MatchPair_15_0001.xml  MatchPair_25_000001.xml  MatchPair_25_00001.xml  MatchPair_25_0001.xml  MatchPair_50_000001.xml  MatchPair_50_00001.xml  MatchPair_50_0001.xml  MatchPair_75_000001.xml  MatchPair_75_00001.xml  MatchPair_75_0001.xml
tasks/rotation_test/: MatchPair_15_000001.xml  MatchPair_15_00001.xml  MatchPair_15_0001.xml  MatchPair_180_000001.xml  MatchPair_180_00001.xml  MatchPair_180_0001.xml  MatchPair_30_000001.xml  MatchPair_30_00001.xml  MatchPair_30_0001.xml  MatchPair_45_000001.xml  MatchPair_45_00001.xml  MatchPair_45_0001.xml  MatchPair_60_000001.xml  MatchPair_60_00001.xml  MatchPair_60_0001.xml  MatchPair_90_000001.xml  MatchPair_90_00001.xml  MatchPair_90_0001.xml
tasks/translation_test/: x_10_000001.xml  x_10_00001.xml  x_10_0001.xml  x_1_000001.xml  x_1_00001.xml  x_1_0001.xml  x_2_000001.xml  x_2_00001.xml  x_2_0001.xml  x_3_000001.xml  x_3_00001.xml  x_3_0001.xml  x_5_000001.xml  x_5_00001.xml  x_5_0001.xml
(+74 files in other folders)
